@@ -5,6 +5,8 @@ repoze.who changes
 After 1.0.13
 ============
 
+- Fix test breakage on Windows.  See http://bugs.repoze.org/issue79 .
+
 - Documented issue with using ``include_ip`` setting in the ``auth_tkt``
   plugin.  See http://bugs.repoze.org/issue81 .
 
